# quakefeed

./: CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.dev.md  README.md  next_steps.md  project_setup.md  pyproject.toml  sonar-project.properties
.github/next_steps/: 01_sonarcloud_integration.md  02_citation.md  03_readthedocs.md  04_zenodo_integration.md  05_linting.md
data/: earthquake_data.db
docs/: Makefile  conf.py  index.rst  make.bat
notebooks/: earthquake_service_databade_integration.ipynb
src/quakefeed/: __init__.py  earthquake_service.py  my_module.py  setup_database.py
tests/: test_database_manager.py  test_earthquake_data_handler.py  test_my_module.py
